https://www.elastic.co/guide/en/apm/agent/go/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

[[unreleased]]
=== Unreleased

https://github.com/elastic/apm-agent-go/compare/v1.11.0...master[View commits]

[[release-notes-1.x]]
=== Go Agent version 1.x

[[release-notes-1.11.0]]
==== 1.11.0 - 2021/02/01

https://github.com/elastic/apm-agent-go/releases/tag/v1.11.0[View release]

- Make TRANSACTION_IGNORE_URLS dynamically configurable: {pull}872[#872]

[[release-notes-1.10.0]]
==== 1.10.0 - 2021/01/20

https://github.com/elastic/apm-agent-go/releases/tag/v1.10.0[View release]

- module/apmsql: add tracingDriver.Unwrap method to get underlying driver {pull}#849[#(849)]
- module/apmgopgv10: add support for github.com/go-pg/pg/v10 {pull}857[(#857)]
- Enable central configuration of "sanitize_field_names" {pull}856[(#856)]
- module/apmgrpc: set span destination context {pull}861[(#861)]

[[release-notes-1.9.0]]
==== 1.9.0 - 2020/11/02

https://github.com/elastic/apm-agent-go/releases/tag/v1.9.0[View release]

- module/apmgoredisv8: introduce new package to support go-redis v8 {pull}780[#(780)]
- module/apmhttp: introduce httptrace client option {pull}788[#(788)]
- module/apmsql: add support for database/sql/driver.Validator {pull}791[#(791)]
- Record sample rate on transactions and spans, propagate through `tracestate` {pull}804[#(804)]
- module/apmredigo: change redigo dependency to v1.8.2 {pull}807[#(807)]
- Deprecate IGNORE_URLS, replace with TRANSACTION_IGNORE_URLS {pull}811[(#811)]
- Tracer.Close now waits for the transport goroutine to end before returning {pull}816[#(816)]
- Relax Kubernetes pod UID discovery rules {pull}819[#(819)]
- Add transaction and span outcome {pull}820[#(820)]
- Add cloud metadata, configurable with ELASTIC_APM_CLOUD_PROVIDER {pull}823[#(823)]